fix z-index issue member-nav

--- a/src/app/core/top-nav/member-nav/member-nav.component.css
+++ b/src/app/core/top-nav/member-nav/member-nav.component.css
@@ -31,6 +31,8 @@ li {
   font-size: 2rem;
   user-select: none;
   -webkit-user-select: none; /* Safari Vendor Präfix */
+
+  z-index: 10;
 }
 
 /* Zusätzliche Überprüfung auf ältere Safari-Versionen */
